--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "isomorphic-unfetch": "^3.1.0",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "slug": "^5.3.0"
   },
   "devDependencies": {
     "eslint": "8.12.0",
